--- a/index.ipynb
+++ b/index.ipynb
@@ -621,22 +621,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Solta', 'Greenville']"
+       "['Solta']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_two = top_travel_cities[0:2]\n",
+    "top_two = top_travel_cities[0:1]\n",
     "top_two"
    ]
   },
