Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -529,22 +529,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Albuquerque', 'Archipelago Sea']"
+       "['Albuquerque']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_travel_cities[6:8]"
+    "top_travel_cities[6:7]"
    ]
   },
   {
