--- a/index.ipynb
+++ b/index.ipynb
@@ -786,22 +786,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Walla Walla Valley'"
+       "'Marakesh'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_travel_cities[4]"
+    "top_travel_cities[5]"
    ]
   },
   {
