Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -786,33 +786,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Marakesh'"
+       "'Walla Walla Valley'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_travel_cities[5]"
+    "top_travel_cities[4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "top_travel_cities[4] = 4"
+    "#### top_travel_cities[4] = 4"
    ]
   },
   {
