Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1086,28 +1086,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Toronto',\n",
-       " 'Archipelago Sea',\n",
-       " 'Iguazu Falls',\n",
-       " 'Pyeongchang',\n",
+       "['Marakesh',\n",
        " 'Los Cabos',\n",
-       " 'Buenos Aires',\n",
-       " 'Marakesh',\n",
-       " 'Greenville',\n",
+       " 'Toronto',\n",
+       " 'Pyeongchang',\n",
+       " 'Walla Walla Valley',\n",
        " 'Albuquerque',\n",
        " 'Salina Island',\n",
-       " 'Walla Walla Valley',\n",
+       " 'Archipelago Sea',\n",
+       " 'Greenville',\n",
+       " 'Buenos Aires',\n",
+       " 'Iguazu Falls',\n",
        " 'San Antonio',\n",
        " 'Solta']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
